--- a/Pages/Privacy.cshtml
+++ b/Pages/Privacy.cshtml
@@ -1,8 +1,35 @@
 ﻿@page
 @model PrivacyModel
 @{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Thông tin liên hệ";
 }
-<h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+
+
+
+<h2>Thông tin liên hệ</h2>
+<p>
+    Trường Đại học Khoa học Xã hội và Nhân văn – Đại học Quốc gia TP HCM
+ </p>
+ <p>
+    10-12 Đinh Tiên Hoàng, phường Bến Nghé, Quận 1, TP. Hồ Chí Minh
+</p>
+<h4>Đào tạo đại học</h4>
+<p>- Phòng B.001</p>
+<p>- Email :phongdaotao@hcmussh.edu.vn</p>
+<p>- Điện thoại: (028) 38293828</p>
+<p>Số nội bộ:</p>
+<p>+ Chính quy, Văn bằng 2, Liên thông, Từ Xa: nhánh 112</p>
+<p>+ Vừa làm vừa học, Song bằng: nhánh 113</p>
+<p>Fax:    (028) 38221903</p>
+<h4>Đào tạo sau đại học</h4>
+<p>- Phòng B107</p>
+<p>- Điện thoại: (84-28) 39 100 221 (số nội bộ: 121)</p>
+<p>- Email: saudaihoc@hcmussh.edu.vn</p>
+
+
+
+
+
+
+
